prevent overflow and resize image for tablet view

--- a/src/components/NewsCard/NewsCard.css
+++ b/src/components/NewsCard/NewsCard.css
@@ -111,13 +111,14 @@
 .card__header {
   max-width: 352px;
   width: 100%;
-  /* height: 60px; */
+  height: 60px;
   font-family: "Roboto Slab";
   font-weight: 400;
   font-size: 26px;
   line-height: 30px;
   color: #1a1822;
   margin-bottom: 16px;
+  overflow: hidden;
 }
 
 .card__paragraph {
@@ -129,6 +130,7 @@
   line-height: 22px;
   color: #1a1822;
   margin-bottom: 40px;
+  overflow: hidden;
 }
 
 .card__author {
@@ -142,11 +144,16 @@
   letter-spacing: 0.4px;
   background-color: #fff;
   color: #b6bcbf;
+  overflow: hidden;
 }
 
 @media (max-width: 760px) {
   .card {
     max-width: 224px;
+  }
+
+  .card__image {
+    height: 150px;
   }
 
   .card__content {
@@ -155,6 +162,8 @@
 
   .card__header {
     margin-bottom: 10px;
+    /* width: 192px; */
+    height: 72px;
     font-size: 22px;
     line-height: 24px;
   }
